--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,9 @@
 /* Universal Styles  */
+html,
 body {
+  max-width: 1200px;
+  margin: auto;
+  font-size: 18px;
   color: white;
   background-color: black;
   border: 1px solid red;
@@ -12,12 +16,15 @@ nav {
 
 .main-container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border: 1px solid blue;
 }
 
 /* Header Section */
 .header-container {
-  width: 100%;
+  width: 80%;
   display: flex;
   align-items: center;
   background-color: black;
