--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,15 +3,37 @@ html,
 body {
   max-width: 1200px;
   margin: auto;
+  font-family: Helvetica, sans-serif;
   font-size: 18px;
   color: white;
   background-color: black;
-  border: 1px solid red;
+
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: 0.25rem;
+  margin-left: 3rem;
+  margin-bottom: 2rem;
+  margin-right: 3rem;
+  border: 1px solid yellow;
+}
+
+h2 {
+  display:flex;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-top: 2rem;
+  margin-left: 3rem;
+
 }
 
 nav {
+  width: 80%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  border: 1px solid purple;
 }
 
 .main-container {
@@ -31,27 +53,51 @@ nav {
   margin: 0;
 }
 
-.header-text {
-  vertical-align: middle;
-  border: 1px solid green;
+.header-container img {
+  height: 1.5rem;
+  margin: 0.5rem;
 }
 
+.header-text {
+  vertical-align: middle;
+  font-size: 1rem;
+  margin: 0.66rem 0.5rem;
+}
 
 /*  Banner Section  */
+.banner {
+  width: 100%;
+  height: 25rem;
+  border: 1px solid blue;
+}
 .banner-image {
   display: flex;
   align-items: center;
   background-image: url("../images/moto.jpeg");
   width: 100%;
-  height: auto;
+  height: 25rem;
+  background-size: cover;
+  background-position: center center;
 }
 
 .banner-text {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  text-transform: uppercase;
   background-color: black;
+  width: 40%;
+  margin-left: 10%;
+  margin-top: 9rem;
+  border: 1px solid red;
 }
 
 
 /*  Navigation Section  */
 .nav {
-  background-color: maroon;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: firebrick;
+  border: 1px solid green;
 }
