--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,6 @@ body {
   font-size: 18px;
   color: white;
   background-color: black;
-
 }
 
 h1 {
@@ -78,6 +77,7 @@ nav {
   display: flex;
   align-items: center;
   background-image: url("../images/moto.jpeg");
+  background-repeat: no-repeat;
   width: 100%;
   height: 25rem;
   background-size: cover;
@@ -85,16 +85,15 @@ nav {
 }
 
 .banner-text {
-  display: flex;
-  flex-wrap: wrap;
+  display: block;
   align-items: center;
   text-transform: uppercase;
   background-color: black;
-  width: 40%;
+  max-width: 40%;
+  min-width: 10rem;
   margin-left: 10%;
   margin-top: 9rem;
 }
-
 
 /*  Navigation Section  */
 .nav {
@@ -190,4 +189,42 @@ nav {
 .copyright-container {
   width: 80%;
   margin: 2.5rem;
+}
+
+@media only screen and (max-width: 1024px) {
+  .nav span {
+    display: none;
+  }
+
+  .nav {
+    display: inline-block;
+    text-align: center;
+  }
+
+  .nav #menu {
+    display: inline-block;
+    border: 1px solid black;
+  }
+
+  .product-image {
+    width: 47%;
+    overflow: hidden;
+  }
+
+  #glasses {
+    display: none;
+  }
+
+}
+
+@media only screen and (min-width: 1023px) {
+  #menu {
+    display: none;
+  }
+
+  .nav span {
+    display: flex;
+    justify-content: center;
+    border: 1px solid green;
+  }
 }
