--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 h1 {
+  display: flex;
   font-size: 2rem;
   font-weight: bold;
   margin-top: 0.25rem;
@@ -81,16 +82,16 @@ nav {
   width: 100%;
   height: 25rem;
   background-size: cover;
-  background-position: center;
+  background-position: 60%;
 }
 
 .banner-text {
-  display: block;
+  display: inline-block;
   align-items: center;
   text-transform: uppercase;
   background-color: black;
   max-width: 40%;
-  min-width: 10rem;
+  max-height: 50%;
   margin-left: 10%;
   margin-top: 9rem;
 }
@@ -128,6 +129,7 @@ nav {
   align-items: center;
   width: 30%;
   height: auto;
+  margin: 0 auto;
   border: 4px solid black;
 }
 
@@ -203,7 +205,6 @@ nav {
 
   .nav #menu {
     display: inline-block;
-    border: 1px solid black;
   }
 
   .product-image {
@@ -213,6 +214,29 @@ nav {
 
   #glasses {
     display: none;
+  }
+
+  body {
+    margin: auto;
+  }
+
+  .header-container,
+  .copyright-container,
+  .location-hours,
+  .product-container {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  .banner-text {
+    margin-left: 0;
+    margin-right: 0;
+    max-width: 50%;
   }
 
 }
@@ -227,4 +251,74 @@ nav {
     justify-content: center;
     border: 1px solid green;
   }
+}
+
+@media only screen and (max-width: 470px) {
+
+  h1 {
+    font-size: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  h2{
+    font-size: .77rem;
+    padding-bottom: .5rem;
+  }
+
+  .header-text {
+    display: none;
+  }
+
+  .header-container {
+    justify-content: center;
+  }
+
+  .banner {
+    max-height: 15rem;
+  }
+
+  .banner-image {
+    max-height: 15rem;
+
+  }
+
+  .banner-text {
+    display: inline-block;
+    min-width: 100%;
+    margin-top: 10rem;
+    max-height: 8rem;
+  }
+
+  #watch {
+    display: none;
+  }
+
+  .product-image {
+    width: 90%;
+    overflow: hidden;
+  }
+
+  .location-hours {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .location,
+  .hours {
+    min-width: 90%;
+  }
+
+  .location-hours p {
+    padding-left: 0rem;
+  }
+
+  .location p {
+    padding-bottom: 0.5rem;
+  }
+
+  .copyright-container {
+    text-align: center;
+  }
+
 }
